improve the design of homepage - gave fix height on header - removed fix navbar and made it normal navigation bar -- Remove class navbar-fixed-top and add main-navbar class to make it normal -- change nav fonts size and gap - added mobile device and show languages bottom of it - changes the color of languages - changed content of success stories and team member

--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -272,6 +272,8 @@ header {
   -moz-background-size: cover;
   background-size: cover;
   -o-background-size: cover;
+  position: relative;
+  top: -120px
 }
 
 header .intro-text {
