--- a/app/assets/stylesheets/layout.sass
+++ b/app/assets/stylesheets/layout.sass
@@ -8,17 +8,21 @@
   color: #000
 
 .nav > li > a 
-  padding: 10px 20px
-  font-size: 18px
+  padding: 10px 15px
+  font-size: 14px
 
+.main-navbar
+  position: relative
+  z-index: 2
 .header_white_space
-  height: 200px
+  height: 150px
 .language
   display: inline-block
 .mobile
   display: inline-block
-  width: 300px
-
+  width: 200px
+  img
+    width: 100%
 .email_register
   .form-control
     background-color: transparent    
@@ -54,3 +58,22 @@
     background-image: url('2.jpg')
   .mem3
     background-image: url('3.jpg')
+
+header
+  height: 660px
+  position: relative
+  section
+    padding: 0
+  .container
+    position: relative
+    top: 150px
+  &-element
+    position: relative
+  .language
+    position: absolute
+    top: 90px
+    right: 230px
+    font-size: 16px
+    color: #000
+
+
